--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="main-left">
         <div id="main-left-top">
           <div id="testimonial-1" class="grid-item">
-            <img id="quote" src="./images/bg-pattern-quotation.svg" alt="qoute">
+            <img id="quote" src="./bg-pattern-quotation.svg" alt="qoute">
             <div class="header">
               <img src="./images/image-daniel.jpg" alt="deniel profile pic">
               <div class="testimonial-profile-info">
@@ -45,7 +45,7 @@
           </div>
           <div id="testimonial-2" class="grid-item">
             <div class="header">
-              <img src="./images/image-jonathan.jpg" alt="jonathan profile pic">
+              <img src="./image-jonathan.jpg" alt="jonathan profile pic">
               <div class="testimonial-profile-info">
                 <p class="name">Jonathan Walters</p>
                 <p>Verified Graduate</p>
@@ -59,7 +59,7 @@
         <div id="main-left-bottom">
           <div id="testimonial-3" class="grid-item">
             <div class="header">
-              <img src="./images/image-jeanette.jpg" alt="jeanette profile pic">
+              <img src="./image-jeanette.jpg" alt="jeanette profile pic">
               <div class="testimonial-profile-info">
                 <p class="name">Jeanette Harmon</p>
                 <p>Verified Graduate</p>
@@ -71,7 +71,7 @@
           </div>
           <div id="testimonial-4" class="grid-item">
             <div class="header">
-              <img src="./images/image-patrick.jpg" alt="patrick profile pic">
+              <img src="./image-patrick.jpg" alt="patrick profile pic">
               <div class="testimonial-profile-info">
                 <p class="name">Patrick Abrams</p>
                 <p>Verified Graduate</p>
@@ -88,7 +88,7 @@
       </div>
       <div id="testimonial-5" class="grid-item">
         <div class="header">
-          <img src="./images/image-kira.jpg" alt="kira profile pic">
+          <img src="./image-kira.jpg" alt="kira profile pic">
           <div class="testimonial-profile-info">
             <p class="name">Kira Whittle</p>
             <p>Verified Graduate</p>
