--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="main-left">
         <div id="main-left-top">
           <div id="testimonial-1" class="grid-item">
-            <img id="quote" src="./bg-pattern-quotation.svg" alt="qoute">
+            <img id="quote" src="bg-pattern-quotation.svg" alt="qoute">
             <div class="header">
               <img src="image-daniel.jpg" alt="deniel profile pic">
               <div class="testimonial-profile-info">
