--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p>Verified Graduate</p>
               </div>
             </div>
-            <h4>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
+            <h4 id="deniel-quote">I received a job offer mid-course, and the subjects I learned were current, if not more so, 
               in the company I joined. I honestly feel I got every penny’s worth.
             </h4>
             <p>“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
