--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/EmamHossainEmo">Emam Hossain</a>.
     </footer>
   </body>
 </html>
